--- a/index.html
+++ b/index.html
@@ -62,19 +62,7 @@
               </div>
             </div>
           </ul>
-          <div class="weather-forecast">
-<div class="row">
-  <div class="col-2">
-    <div class="weather-forecast-date">
-Thur
-</div>
-<img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="" width="40" />
-<div class="weather-forecast-temperatures">
-<span class="weather-forcast-max">18°</span>
-<span class="weather-forcast-min">12°</span>
- </div>
-  </div>
-</div>
+          <div class="weather-forecast" id="forecast">
           </div>
         </div>
         <small>
